--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -181,6 +181,15 @@ main .pg-top-section {
     white-space: nowrap;
 }
 
+.todo-items {
+    display: block;
+    transition: 200ms all ease-in-out;
+}
+
+.section.collapsed .todo-items {
+    display: none;
+}
+
 .todo-item {
     cursor: pointer;
     display: grid;
@@ -249,6 +258,11 @@ main .pg-top-section {
 
 .todo-date {
     font-size: 0.9rem;
+}
+
+.todo-date.expired {
+    color: #dc2626;
+    text-decoration: line-through;
 }
 
 .todo-date:not(input) {
@@ -368,6 +382,14 @@ button.add-todo:hover svg {
     visibility: visible;
 }
 
+.overlay, .dialog, .corner-popup-container, .corner-popup {
+    pointer-events: all;
+    user-select: all;
+    -moz-user-select: all;
+    -webkit-user-select: initial;
+    -webkit-user-drag: initial;
+}
+
 .overlay {
     position: fixed;
     width: 100vw;
@@ -378,6 +400,7 @@ button.add-todo:hover svg {
     backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(1px);
     z-index: 5;
+    overflow: auto;
 }
 
 .dialog {
@@ -390,17 +413,38 @@ button.add-todo:hover svg {
     transform: translateX(-50%) translateY(-50%);
     padding: 2rem;
     background-color: #fff;
-    width: 60%;
-    height: 50%;
+    width: min(750px, 90%);
+    height: min(50%, auto);
     overflow: auto;
 }
 
-.overlay, .dialog {
-    pointer-events: all;
-    user-select: all;
-    -moz-user-select: all;
-    -webkit-user-select: initial;
-    -webkit-user-drag: initial;
+.dialog.confirmation {
+
+}
+
+.dialog.confirmation .buttons {
+    margin-top: 1rem;
+    gap: 1rem;
+    justify-content: flex-end;
+}
+
+.confirmation-button, .confirm {
+    border-radius: 6px;
+    padding: 0.6rem 1rem;
+    font-weight: 500;
+}
+
+.confirmation-button:hover, .confirm:hover {
+    background-color: #ddd;
+}
+
+.confirmation-button.yes {
+    color: #fff;
+    background-color: #dc2626;
+}
+
+.confirmation-button.yes:hover {
+    background-color: #c91b1b;
 }
 
 .dialog > .top-header {
@@ -434,6 +478,18 @@ button.close-popup:hover {
     grid-template-columns: auto 1fr;
     row-gap: 0.7rem;
     padding-left: 1rem;
+    overflow: auto;
+}
+
+.dialog.confirmation .popup-body {
+    column-gap: 1rem;
+    align-items: flex-start;
+}
+
+.dialog.confirmation .name {
+    font-family: 'Lato';
+    font-size: 1.1rem;
+    font-weight: 700;
 }
 
 .popup-body .todo-checkbox {
@@ -525,8 +581,64 @@ textarea.todo-desc {
     color: var(--font-color);
 }
 
-.priority-button, .confirm {
+.priority-button {
     padding: 0.5rem 1rem;
     border-radius: 4px;
     font-weight: 600;
+}
+
+.confirm {
+    padding: 0.7rem 1rem;
+}
+
+.right {
+    justify-content: end;
+}
+
+.corner-popup-container {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    padding: 0 1rem 1rem 0;
+    z-index: 999;
+}
+
+.corner-popup {
+    min-height: 2rem;
+    max-width: 400px;
+    padding: 1rem 1.5rem;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: start;
+    column-gap: 0.5rem;
+    border-radius: 6px;
+    font-family: 'Lato', 'Roboto', 'Helvetica', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    color: #fff;
+    box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.1);
+}
+
+.corner-popup.success {
+    background-color: #4CAF50;
+}
+
+.corner-popup button {
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.corner-popup button:hover {
+    background-color: rgba(0, 0, 0, 0.06);
+}
+
+.corner-popup.error {
+    background-color: #f44336;
+}
+
+.corner-popup svg {
+    fill: #fff;
 }
