--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -287,6 +287,7 @@ main .pg-top-section {
 }
 
 input[type="checkbox"] {
+    position: relative;
     cursor: pointer;
     appearance: none;
     width: 1rem;
@@ -299,14 +300,14 @@ input[type="checkbox"]:checked {
     background-color: #212427;
 }
 
-.checkmark, .checkmark::after {
+.checkmark, .checkmark *, .checkmark::after {
     pointer-events: none;
     user-select: none;
 }
 
 .checkmark {
     position: absolute;
-    top: -0.18rem;
+    top: -0.168rem;
     left: 1.1rem;
     display: none;
     height: 25px;
@@ -320,6 +321,10 @@ input[type="checkbox"]:checked {
     top: 0.3rem;
     color: #ffffff;
     font-weight: bold;
+}
+
+input[type="checkbox"]:active, input[type="checkbox"]:active + .checkmark::after {
+    transform: scale(90%);
 }
 
 input[type="checkbox"]:checked + .checkmark::after, input[type="checkbox"]:checked + .checkmark {
@@ -509,6 +514,7 @@ button.close-popup:hover {
 
 .popup-body .checkmark {
     left: 0.1rem;
+    top: -0.2rem;
 }
 
 .popup-body .todo-desc, .popup-body .date, .popup-body .buttons {
