--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -292,7 +292,7 @@ input[type="checkbox"] {
     appearance: none;
     width: 1rem;
     height: 1rem;
-    border: 1px solid black;
+    border: 1px solid #212427;
     border-radius: 2px;
 }
 
